[package]
name = "antidote"
version = "2.0.0"
edition = "2021"
rust-version = "1.63"

# Metadata for publication
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "Poison-free versions of the standard library Mutex and RwLock types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sfackler/rust-antidote"
readme = "README.md"
